| Bug #41268 | Help Text for \c is misleading in client command line interface | ||
|---|---|---|---|
| Submitted: | 5 Dec 2008 18:25 | Modified: | 12 May 2009 2:38 |
| Reporter: | Dups Wijay | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Command-line Clients | Severity: | S3 (Non-critical) |
| Version: | 5.1.30 | OS: | Any |
| Assigned to: | Sergei Glukhov | CPU Architecture: | Any |
| Tags: | client, Help | ||
[5 Dec 2008 18:25]
Dups Wijay
[5 Dec 2008 18:30]
Paul DuBois
Please do not change "clear" to "cancel"; that will require all the manuals to have a version-specific note about the old name of the command. The effect of \c/clear is to "clear the current input statement". Perhaps that is a sufficient clarification for the help text?
[5 Dec 2008 18:33]
Dups Wijay
Yes "clear current input statement" is fine. But also remove the statement "clear the buffer" cos that is definitely misleading :)
[6 Dec 2008 16:07]
MySQL Verification Team
Thank you for the bug report.
[19 Mar 2009 7:50]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/69696 2777 Sergey Glukhov 2009-03-19 Bug#41268 Help Text for \c is misleading in client command line interface fixed help message @ client/mysql.cc fixed help message
[19 Mar 2009 7:59]
Alexander Barkov
ok to push
[19 Mar 2009 8:38]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/69704 2778 Sergey Glukhov 2009-03-19 Bug#41268 Help Text for \c is misleading in client command line interface fixed help message @ client/mysql.cc fixed help message
[27 Mar 2009 14:31]
Bugs System
Pushed into 5.0.80 (revid:joro@sun.com-20090327142516-55gumdxj39z6eijj) (version source revid:leonard@mysql.com-20090324072904-7w2lxdxzw8hx1rnm) (merge vers: 5.0.80) (pib:6)
[27 Mar 2009 14:56]
Bugs System
Pushed into 5.1.34 (revid:joro@sun.com-20090327143448-wuuuycetc562ty6o) (version source revid:sergey.glukhov@sun.com-20090319092612-yi8naqj8ap7axo61) (merge vers: 5.1.34) (pib:6)
[27 Mar 2009 23:27]
Paul DuBois
Noted in 5.0.80, 5.1.34 changelogs. In the help command output displayed by mysql, the description for the \c (clear) command was misleading. Setting report to NDI pending push into 6.0.x.
[13 Apr 2009 9:20]
Bugs System
Pushed into 6.0.11-alpha (revid:alik@sun.com-20090413084402-snnrocwzktcl88ny) (version source revid:sergey.glukhov@sun.com-20090319094318-22m70sd15xk0tidr) (merge vers: 6.0.11-alpha) (pib:6)
[13 Apr 2009 19:18]
Paul DuBois
Noted in 6.0.11 changelog.
[14 Apr 2009 15:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/72018 2777 Sergey Glukhov 2009-04-14 Bug#41268 Help Text for \c is misleading in client command line interface(addon) fixed message for 'help' command @ client/mysql.cc fixed message for 'help' command
[14 Apr 2009 15:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/72020 2724 Sergey Glukhov 2009-04-14 Bug#41268 Help Text for \c is misleading in client command line interface(addon) fixed message for 'help' command @ client/mysql.cc fixed message for 'help' command
[5 May 2009 18:51]
Bugs System
Pushed into 5.0.82 (revid:davi.arnaut@sun.com-20090505184158-dvmedh8n472y8np5) (version source revid:davi.arnaut@sun.com-20090505184158-dvmedh8n472y8np5) (merge vers: 5.0.82) (pib:6)
[5 May 2009 19:38]
Bugs System
Pushed into 5.1.35 (revid:davi.arnaut@sun.com-20090505190206-9xmh7dlc6kom8exp) (version source revid:davi.arnaut@sun.com-20090505190206-9xmh7dlc6kom8exp) (merge vers: 5.1.35) (pib:6)
[6 May 2009 14:06]
Bugs System
Pushed into 6.0.12-alpha (revid:svoj@sun.com-20090506125450-yokcmvqf2g7jhujq) (version source revid:azundris@mysql.com-20090414214857-7zbsbyylr8axi7xg) (merge vers: 6.0.11-alpha) (pib:6)
[9 May 2009 16:39]
Bugs System
Pushed into 5.1.34-ndb-6.2.18 (revid:jonas@mysql.com-20090508185236-p9b3as7qyauybefl) (version source revid:jonas@mysql.com-20090508185236-p9b3as7qyauybefl) (merge vers: 5.1.34-ndb-6.2.18) (pib:6)
[9 May 2009 17:36]
Bugs System
Pushed into 5.1.34-ndb-6.3.25 (revid:jonas@mysql.com-20090509063138-1u3q3v09wnn2txyt) (version source revid:jonas@mysql.com-20090509063138-1u3q3v09wnn2txyt) (merge vers: 5.1.34-ndb-6.3.25) (pib:6)
[9 May 2009 18:34]
Bugs System
Pushed into 5.1.34-ndb-7.0.6 (revid:jonas@mysql.com-20090509154927-im9a7g846c6u1hzc) (version source revid:jonas@mysql.com-20090509154927-im9a7g846c6u1hzc) (merge vers: 5.1.34-ndb-7.0.6) (pib:6)
[12 May 2009 2:38]
Paul DuBois
Additional fix is a minor change. Closing report without additional changelog entry.
[15 Jun 2009 8:24]
Bugs System
Pushed into 5.1.35-ndb-6.3.26 (revid:jonas@mysql.com-20090615074202-0r5r2jmi83tww6sf) (version source revid:jonas@mysql.com-20090615070837-9pccutgc7repvb4d) (merge vers: 5.1.35-ndb-6.3.26) (pib:6)
[15 Jun 2009 9:04]
Bugs System
Pushed into 5.1.35-ndb-7.0.7 (revid:jonas@mysql.com-20090615074335-9hcltksp5cu5fucn) (version source revid:jonas@mysql.com-20090615072714-rmfkvrbbipd9r32c) (merge vers: 5.1.35-ndb-7.0.7) (pib:6)
[15 Jun 2009 9:44]
Bugs System
Pushed into 5.1.35-ndb-6.2.19 (revid:jonas@mysql.com-20090615061520-sq7ds4yw299ggugm) (version source revid:jonas@mysql.com-20090615054654-ebgpz7elwu1xj36j) (merge vers: 5.1.35-ndb-6.2.19) (pib:6)
