Bug#41268 Help Text for \c is misleading in client command line interface fixed help message

client/mysql.cc:
  fixed help message